fix: hover effect cutoff

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,5 +54,5 @@ a {
 a:hover {
   border-radius: 2px;
   color: rgb(3, 169, 244);
-  box-shadow: 0 2px 0 4px rgba(3, 169, 244, 0.2), inset 0 -1.375em 0 rgba(3, 169, 244, 0.2);
+  box-shadow: 0 2px 0 4px rgba(3, 169, 244, 0.2), inset 0 -1.5em 0 rgba(3, 169, 244, 0.2);
 }
